kubernetes-networks/canary/canary-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-v2-svc
spec:
  selector:
    app: webapp-v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "mtest"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
  name: webapp-v2
spec:
  rules:
    - host: example.app.org
      http:
        paths:
          - backend:
              serviceName: webapp-v2-svc
              servicePort: 80
            # path: /test-webapp-v2
            path: /test-webapp
