kubernetes-networks/canary/current-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-v1-svc
spec:
  selector:
    app: webapp-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: webapp-v1
spec:
  rules:
    - host: example.app.org
      http:
        paths:
          - backend:
              serviceName: webapp-v1-svc
              servicePort: 80
            path: /test-webapp
